force-app/main/default/objects/LGL_Service__c/LGL_Service__c.object-meta.xml
<CustomObject>
    <description>Represents an individual service use/request by a guest</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>