force-app/main/default/objects/LGL_Service__c/fields/LGL_Country_Residence__c.field-meta.xml
<CustomField>
    <fullName>LGL_Country_Residence__c</fullName>
    <label>Country of Residence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>