force-app/main/default/objects/LGL_Service__c/fields/LGL_Email__c.field-meta.xml
<CustomField>
    <fullName>LGL_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>