force-app/main/default/objects/LGL_Service__c/fields/LGL_First_Name__c.field-meta.xml
<CustomField>
    <fullName>LGL_First_Name__c</fullName>
    <description>First name of the guest requesting the service</description>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>