force-app/main/default/objects/LGL_Service__c/fields/LGL_Guest__c.field-meta.xml
<CustomField>
    <fullName>LGL_Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In case that the Service Request is created for a particular existing guest, the guest for which the request was created</description>
    <label>Guest</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>