force-app/main/default/objects/LGL_Service__c/fields/LGL_Guest_Id__c.field-meta.xml
<CustomField>
    <fullName>LGL_Guest_Id__c</fullName>
    <label>Guest Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>