force-app/main/default/objects/LGL_Service__c/fields/LGL_Guest_Id_Number_Part__c.field-meta.xml
<CustomField>
    <fullName>LGL_Guest_Id_Number_Part__c</fullName>
    <description>Represents the generated number for the Service Request based on the day that service is requested for</description>
    <label>Guest Id Number Part</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>