force-app/main/default/objects/LGL_Service__c/fields/LGL_Guest_Type__c.field-meta.xml
<CustomField>
    <fullName>LGL_Guest_Type__c</fullName>
    <description>Represents the Guest Type for the service request (Standard, VIP, Buyer, etc.)</description>
    <label>Guest Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>