force-app/main/default/objects/LGL_Service__c/fields/LGL_HFS_Case__c.field-meta.xml
<CustomField>
    <fullName>LGL_HFS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related HFS Case for the Guest in case that he also requested the HFS Service</description>
    <label>HFS Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>