force-app/main/default/objects/LGL_Service__c/fields/LGL_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LGL_Last_Name__c</fullName>
    <description>Last Name of the guest requesting the service</description>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>