force-app/main/default/objects/LGL_Service__c/fields/LGL_Luggage_Items__c.field-meta.xml
<CustomField>
    <fullName>LGL_Luggage_Items__c</fullName>
    <description>Number of Luggage Items for the service request</description>
    <label>Luggage Items</label>
    <summaryFilterItems>
        <field>LGL_Service_Item__c.LGL_Service_Type__c</field>
        <operation>equals</operation>
        <value>luggage</value>
    </summaryFilterItems>
    <summaryForeignKey>LGL_Service_Item__c.LGL_Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>