force-app/main/default/objects/LGL_Service__c/fields/LGL_Method_Transport__c.field-meta.xml
<CustomField>
    <fullName>LGL_Method_Transport__c</fullName>
    <label>Method of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Large Coach</fullName>
            </value>
            <value>
                <fullName>Small Coach</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Private Hire</fullName>
            </value>
            <value>
                <fullName>Public Bus</fullName>
            </value>
            <value>
                <fullName>Shopping Express</fullName>
            </value>
            <value>
                <fullName>Refuse to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>