force-app/main/default/objects/LGL_Service__c/fields/LGL_Name__c.field-meta.xml
<CustomField>
    <fullName>LGL_Name__c</fullName>
    <formula>LGL_Title__c + &apos; &apos; + LGL_First_Name__c + &apos; &apos; +  LGL_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>