force-app/main/default/objects/LGL_Service__c/fields/LGL_Phone__c.field-meta.xml
<CustomField>
    <fullName>LGL_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>