force-app/main/default/objects/LGL_Service__c/fields/LGL_Request_Location__c.field-meta.xml
<CustomField>
    <fullName>LGL_Request_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request Location</label>
    <referenceTo>HFS_Collection_Point__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>