force-app/main/default/objects/LGL_Service__c/fields/LGL_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Start_Date__c</fullName>
    <description>Date in which the service will start taking place</description>
    <label>Service Start Date</label>
    <type>DateTime</type>
</CustomField>