force-app/main/default/objects/LGL_Service__c/fields/LGL_Title__c.field-meta.xml
<CustomField>
    <fullName>LGL_Title__c</fullName>
    <label>Title</label>
    <length>10</length>
    <type>Text</type>
</CustomField>